[project]
name = "streamlit-dashboard"
version = "0.1.0"
description = ""
authors = [
    {name = "krit pragobdee",email = "krit.pragobdee@outlook.com"}
]
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "streamlit (>=1.45.1,<2.0.0)",
    "pandas (>=2.2.3,<3.0.0)",
    "numpy (>=2.2.6,<3.0.0)",
    "matplotlib (>=3.10.3,<4.0.0)",
    "yfinance (>=0.2.61,<0.3.0)",
    "statsmodels (>=0.14.4,<0.15.0)"
]
[tool.poetry]
package-mode = false

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"


